Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85826

Some Windows fonts don't work in Text

XMLWordPrintable

    • Windows
    • a1e405ce11eb6760ccca13cf1b4e5d20fa3916e9 (qt/tqtc-qtbase/6.2)

      Fonts Roman and Script for example don't work with the default QtRendering at all. They are also not readable with NativeRendering.

      Probably because they are bitmap fonts, however, some bitmap fonts like System and Terminal do work.

      Text {
       font.family: "Roman"
       text: "hello world"
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes